# klopf-klopf-2026

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  plan.md
contracts/: events.schema.json  mqtt_topics.md  scenarios.md
docs/: CHECKPOINT.md  TODO_DEV.md  TODO_DEVOPS.md
docs/superpowers/specs/: 2026-05-18-web-dashboard-design.md
services/control/: Dockerfile  README.md  pyproject.toml
services/control/scripts/: replay.py
services/control/src/control/: api.py  fsm.py  main.py  mqtt_bridge.py  policy.py  safety.py  storage.py  ws_gateway.py
services/control/tests/: test_api.py  test_fsm.py  test_policy.py  test_safety.py
services/cv/: Dockerfile  README.md  pyproject.toml
services/cv/configs/: demo.json  highway.json  zone_picker.py
services/cv/cv_service/: __main__.py  main.py  publisher.py  stuck_detector.py  tracker.py
services/cv/scripts/: smoke_yolo.py
services/cv/src/cv_service/: __init__.py  main.py  publisher.py  stuck_detector.py  tracker.py  zones.py
services/cv/tests/: test_stuck_detector.py  test_zones.py
web/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
web/src/: index.css
web/src/__tests__/: EventLog.test.tsx  QueueGauges.test.tsx  trafficStore.test.ts
web/src/components/: EventLog.tsx  ManualOverride.tsx  MetricsPanel.tsx  PhaseTimeline.tsx  QueueGauges.tsx  RoadCanvas.tsx  RoadVisualization.tsx  ThreeScene.tsx
web/src/hooks/: useDemoMode.ts  useWebSocket.ts
web/src/lib/: contracts.ts
web/src/pages/: Dashboard.tsx
web/src/store/: trafficStore.ts
