[project]
name = "control"
version = "0.1.0"
description = "Adaptive reversible corridor traffic controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
    "influxdb-client[async]>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
