[project]
name = "cv-service"
version = "0.1.0"
description = "CV service for adaptive reversible traffic light (klopf-klopf-2026)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ultralytics>=8.3,<9",
    "supervision>=0.25,<1",
    "opencv-python>=4.10,<5",
    "paho-mqtt>=2.1,<3",
    "pydantic>=2.9,<3",
]

[project.scripts]
cv-service = "cv_service.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
